# worldCup

./: .gitignore  CNAME  README.md  计划.md
.github/workflows/: deploy-pages.yml
article/: qoder-wc2026-prediction.md
backend/: pyproject.toml  requirements.txt
backend/src/: config.py
backend/src/agents/: base.py  data_agent.py  llm_agent.py  orchestrator.py  prediction_agent.py  simulation_agent.py
backend/src/data/: constants.py  database.py  historical.py  loader.py  models.py  scraper.py
backend/src/export/: exporter.py
backend/src/features/: base_features.py  elo.py  pipeline.py
backend/src/models/: elo_model.py  ensemble.py  lightgbm_model.py  llm_analyzer.py  poisson.py
backend/src/simulation/: monte_carlo.py  tournament.py
docs/: index.html
docs/assets/: index-BJV9SfcA.js  index-DQIHCQx7.js  index-Dj2g0_mI.css
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/Bracket/: BracketMatch.tsx  BracketView.tsx
frontend/src/components/ChampionOdds/: ChampionOdds.tsx  TopContenders.tsx
frontend/src/components/Dashboard/: Dashboard.tsx  SummaryPanel.tsx
frontend/src/components/GroupStage/: GroupStageGrid.tsx
frontend/src/components/Layout/: Header.tsx
frontend/src/data/: predictions.json
frontend/src/types/: index.ts
scripts/: run_prediction.py
