[project]
name = "worldcup-predictor"
version = "1.0.0"
description = "2026 World Cup Champion Prediction System with Multi-Agent AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "lightgbm>=4.5.0",
    "scikit-learn>=1.5.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
]

[project.scripts]
worldcup-predict = "src.agents.orchestrator:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
